# intents

./: Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: ci.yml  publish-docs-page.yml  security-audit.yml
admin-utils/: Cargo.toml
admin-utils/src/: full_access_keys.rs
auth-call/: Cargo.toml
auth-call/src/: lib.rs
bitmap/: Cargo.toml
bitmap/src/: lib.rs
borsh-utils/: Cargo.toml
borsh-utils/examples/: with.rs
borsh-utils/src/: base64.rs  lib.rs  string.rs
borsh-utils/src/adapters/: chrono.rs  mod.rs  tests.rs
controller/: Cargo.toml  README.md
controller/src/: lib.rs
core/: Cargo.toml
core/src/: accounts.rs  amounts.rs  deadline.rs  error.rs  events.rs  fees.rs  lib.rs  nonce.rs  tokens.rs
core/src/engine/: inspector.rs  mod.rs
core/src/engine/state/: cached.rs  deltas.rs  mod.rs
core/src/intents/: account.rs  auth.rs  mod.rs  token_diff.rs  tokens.rs
core/src/payload/: mod.rs  multi.rs  nep413.rs  raw.rs  sep53.rs  tip191.rs  ton_connect.rs  webauthn.rs
core/src/token_id/: error.rs  legacy_tests.rs  mod.rs  nep141.rs  nep171.rs  nep245.rs
crypto/: Cargo.toml
crypto/src/: lib.rs  payload.rs  public_key.rs  signature.rs
crypto/src/curve/: p256.rs  secp256k1.rs
crypto/src/serde/: curve.rs
defuse/: .catalog-info.yaml  Cargo.toml
defuse/src/: accounts.rs  fees.rs  intents.rs  lib.rs
defuse/src/contract/: abi.rs  admin.rs  config.rs  fees.rs  mod.rs  state.rs  upgrade.rs
defuse/src/contract/accounts/: account.rs  lock.rs  mod.rs  state.rs
defuse/src/contract/accounts/account/: mod.rs  nonces.rs
defuse/src/contract/accounts/account/entry/: mod.rs  v0.rs  v1.rs
defuse/src/contract/accounts/account/entry/tests/: legacy.rs
defuse/src/contract/intents/: auth_call.rs  execute.rs  mod.rs  relayer.rs  simulate.rs  state.rs
defuse/src/contract/tokens/: mod.rs
defuse/src/contract/tokens/nep141/: deposit.rs  mod.rs  native.rs  storage_deposit.rs  withdraw.rs
defuse/src/contract/tokens/nep171/: deposit.rs  withdraw.rs
defuse/src/contract/tokens/nep245/: core.rs  deposit.rs  enumeration.rs  force.rs  mod.rs  resolver.rs  withdraw.rs
defuse/src/tokens/: mod.rs  nep141.rs  nep171.rs  nep245.rs
erc191/: Cargo.toml
erc191/src/: lib.rs
io-utils/: Cargo.toml
io-utils/src/: lib.rs
map-utils/: Cargo.toml
map-utils/src/: cleanup.rs
near-utils/: Cargo.toml
near-utils/src/: cache.rs  digest.rs  gas.rs  lib.rs  lock.rs  panic.rs  panic_on_clone.rs  prefix.rs  time.rs
near-utils/src/arbitrary/: account_id.rs  mod.rs
nep245/: Cargo.toml
nep245/src/: core.rs  enumeration.rs  events.rs  lib.rs  receiver.rs  resolver.rs  token.rs
nep413/: Cargo.toml
nep413/src/: lib.rs
nep461/: Cargo.toml
num-utils/: Cargo.toml
num-utils/src/: lib.rs
poa-factory/: Cargo.toml
poa-factory/src/: contract.rs  lib.rs
poa-token/: .catalog-info.yaml  Cargo.toml
poa-token/src/: contract.rs  lib.rs
randomness/: Cargo.toml
randomness/src/: lib.rs
scripts/: get_metadata.sh
sep53/: Cargo.toml
sep53/src/: lib.rs
serde-utils/: Cargo.toml
serde-utils/src/: base58.rs  base64.rs  lib.rs  tlb.rs
test-utils/: Cargo.toml
test-utils/src/: asserts.rs  lib.rs  random.rs  tamper.rs
test-utils/src/arbitrary/: account_id.rs  hex.rs  mod.rs
tests/: Cargo.toml
tests/contracts/: README.md  non-fungible-token.wasm
tests/src/tests/: mod.rs  utils.rs
tests/src/tests/account/: mod.rs
tests/src/tests/defuse/: env.rs  mod.rs  upgrade.rs
tests/src/tests/defuse/accounts/: auth_by_predecessor_id.rs  locked.rs  mod.rs  nonces.rs  traits.rs
tests/src/tests/defuse/intents/: ft_withdraw.rs  mod.rs  native_withdraw.rs  relayers.rs  token_diff.rs
tests/src/tests/defuse/storage/: mod.rs
tests/src/tests/defuse/tokens/: mod.rs  nep141.rs  nep171.rs  nep245.rs
tests/src/tests/defuse/tokens/nep141/: mod.rs  traits.rs
tests/src/tests/defuse/tokens/nep171/: mod.rs
tests/src/tests/defuse/tokens/nep245/: letter_gen.rs  mod.rs  mt_transfer_resolve_gas.rs  traits.rs
tests/src/tests/poa/: factory.rs
tests/src/utils/: crypto.rs  ft.rs  mod.rs  mt.rs  nft.rs  sandbox.rs  storage_management.rs  test_log.rs  wnear.rs
tip191/: Cargo.toml
tip191/src/: lib.rs
ton-connect/: Cargo.toml  README.md
ton-connect/src/: lib.rs
webauthn/: Cargo.toml
webauthn/src/: lib.rs
wnear/: Cargo.toml
wnear/src/: lib.rs
