[package]
name = "defuse-bitmap"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-map-utils.workspace = true

arbitrary = { workspace = true, optional = true }
near-sdk.workspace = true

[features]
arbitrary = ["dep:arbitrary"]

[dev-dependencies]
bnum.workspace = true

[lints]
workspace = true
