[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"]}
derive_more = { workspace = true, features = ["full"] }
near-account-id.workspace = true
hex.workspace = true
near-sdk.workspace = true
randomness.workspace = true
rand_chacha.workspace = true
rstest.workspace = true
